# manicure-tgbot

./: .env.example  .gitignore  Database.py  Makefile  README.md  config.py  database.db  main.py  manicure.db  pyproject.toml
app/: config.py  constants.py  main.py
app/handlers/: __init__.py  approved.py  back_from_date.py  cancel.py  choice_day.py  choice_service.py  choice_time.py  commands.py  new_order.py  order.py  other_message.py  start.py
app/handlers/old/: commands.py  new_order.py
app/infrastructure/database/: README.md  accessor.py  create.sql  init_db.sql  models.py  requests.py
app/keyboards/: kb.py  keyboard_generator.py
app/states/: order.py
handlers/: new_order.py
routers/: __init__.py
